--- a/src/components/CustomerDetails/CustomerDetails.scss
+++ b/src/components/CustomerDetails/CustomerDetails.scss
@@ -1,20 +1,236 @@
 .ebkStore-cdWrapper-cnt{
-    height: 591px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    // height: 591px;
     /* UI Properties */
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #000000;
+    border: 1px solid #a6a4a4;
     border-radius: 1px;
     opacity: 1;
     padding: 17px 34px 57px 52px;
 }
 
+// .ebkStore-subWrapper-cnt{
+//     width: 68%;
+//     margin-left: 16px;
+//     margin-right: 27%;
+// }
+
 .ebkStore-cdlabel-cnt{
-    width: 18%;
+    // width: 18%;
     height: 24px;
-    /* UI Properties */
     text-align: left;
-    font: normal normal medium 18px/24px Roboto;
+    font-size: 20px;
+    font-weight: 500;
     letter-spacing: 0px;
     color: #333232;
+    opacity: 1;
+}
+
+.ebkStore-addAddressBtn-cnt{
+    width: 18%;
+    height: 35px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #A03037;
+    border-radius: 2px;
+    opacity: 1;
+/* UI Properties */
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #A03037;
+    opacity: 1;
+    }
+
+.ebkStore-cdHeader-cnt{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+.ebkStore-nameDetails-cnt{
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    width: 32%;
+}
+
+.ebkStore-cdNameCnt-cnt{
+    width: 100%;
+    padding-left: 10px;
+    height: 45px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    opacity: 1;
+}
+
+.ebkStore-cdNameLabel-cnt{
+    height: 16px;
+    text-align: left;
+    font: normal normal normal 15px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+    opacity: 1;
+}
+
+.ebkStore-nameMobnodetails-cnt{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.ebkStore-addHeader-cnt{
+    width: 12px;
+    height: 12px;
+    background: #A03037 0% 0% no-repeat padding-box;
+    margin-top: 10px;
+    opacity: 1;
+}
+
+.ebkStore-addHeaderLabel-cnt{
+    text-align: left;
+    font-size: 20px;
+    font-style: 700;
+    letter-spacing: 0.7px;
+    color: #0A0102;
+    opacity: 1;
+    margin-left: 4px;
+}
+
+.ebkStore-add01-cnt{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.ebkStore-editAddress-cnt{
+    width: 21px;
+    height: 16px;
+    text-align: left;
+    font-weight: 600;
+    letter-spacing: 0px;
+    color: #A03037;
+    opacity: 1;
+    margin-left: 20px;
+}
+
+.ebkStore-addressLabel-cnt{
+    // width: 47px;
+    height: 16px;
+    text-align: left;
+    font: normal normal normal 13px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+    opacity: 1;
+    margin-top: 18px;
+    margin-left: 26px;
+    margin-bottom: 10px;
+}
+
+.ebkStore-addInputCd-cnt{
+    width: 66%;
+    height: 82px;
+    /* UI Properties */
+    background: #F5F5F5 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 2px;
+    opacity: 1;
+    margin-left: 25px;
+}
+
+.ebkStore-stateInput-cnt{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-top: 10px;
+    gap: 20px;
+    margin-right: 30%;
+    justify-content: space-between;
+}
+
+
+.ebkStore-cityLabel-cnt{
+    width: 50px;
+    height: 16px;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
+    opacity: 1;
+}
+
+.ebkStore-inputLabel01-cnt{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.ebkStore-cityInput-cnt{
+    height: 45px;
+    background: #F5F5F5 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 2px;
+    opacity: 1;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+.ebkStore-homeLabel-cnt{
+    // height: 20px;
+    margin-left: 2px;
+    text-align: left;
+    font-size: 20px;
+    letter-spacing: 0.4px;
+    color: #0A0102;
+    opacity: 1;
+}
+
+.ebkStore-addHome-cnt{
+    margin-top: 20px;
+}
+
+.ebkStore-homeAddresslabel-cnt{
+    text-align: left;
+    font: normal normal normal 13px / 16px Roboto;
+    letter-spacing: 0.2px;
+    color: #0A0102;
+    opacity: 1;
+    margin-left: 20px;
+}
+
+.ebkStore-homeRadioCnt-cnt{
+    margin-bottom: 16px;
+}
+
+.ebkStore-homeAddressCnt-cnt{
+    width: 56%;
+    
+}
+
+
+.ebkStore-homeAddressCnt-cnt{
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.ebkStore-continueBtnCnt-cnt{
+    display: flex;
+    justify-content: end;
+}
+
+.ebkStore-continueBtn-cnt{
+    width: 20%;
+    height: 35px;
+    /* UI Properties */
+    background: #3371B5 0% 0% no-repeat padding-box;
+    border-radius: 3px;
+    opacity: 1;
+    margin-top: 18px;
+    font: normal normal medium 14px/17px Lato;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    text-transform: uppercase;
     opacity: 1;
 }
