--- a/src/components/BookUI/BookUI.scss
+++ b/src/components/BookUI/BookUI.scss
@@ -64,6 +64,10 @@
     height: 38px;
     background-color: #A03037;
     color: white;
+    font-size: 11px;
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 .ebkStrore-buttonCntlink-cnt{
@@ -286,4 +290,50 @@
     /* UI Properties */
     color: #707070 0% 0% no-repeat padding-box;
     opacity: 1;
+}
+
+.ebkStore-removeQtyCnt-cnt{
+    width: 38px;
+    height: 38px;
+    background: #FAFAFA 0% 0% no-repeat padding-box;
+    border: 1px solid #DBDBDB;
+    font-size: 25px;
+    opacity: 0.4;
+    border-radius: 50%;
+    cursor: pointer;
+    &:hover{
+        background-color: gray;
+    }
+}
+
+.ebkStore-quantityCnt-cnt{
+    width: 50px;
+    height: 38px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DBDBDB;
+    border-radius: 2px;
+    opacity: 1;
+    font-size: 30px;
+    text-align: center;
+}
+
+.ebkStore-addQtyCnt-cnt{
+    width: 38px;
+    height: 38px;
+    background: #FAFAFA 0% 0% no-repeat padding-box;
+    border: 1px solid #DBDBDB;
+    font-size: 25px;
+    opacity: 1;
+    border-radius: 50%;
+    cursor: pointer;
+    &:hover{
+        background-color: gray;
+    }
+}
+
+.ebkStore-bookUIQuantityCnt-cnt{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
 }
