--- a/src/components/OrderPage/OrderPage.scss
+++ b/src/components/OrderPage/OrderPage.scss
@@ -24,7 +24,6 @@
     color: #333232;
     text-transform: capitalize;
     opacity: 1;
-    margin-top: 28px;
     margin-bottom: 15px;
 }
 
@@ -76,6 +75,7 @@
 }
 
 .ebkStore-tr1td02Cnt-cnt{
+    width: 30%;
     padding-left: 30px;
     padding-right: 30px;
 }
